--- a/ai_resume_screener/pyproject.toml
+++ b/ai_resume_screener/pyproject.toml
@@ -16,7 +16,7 @@ maintainers = [
 ]
 keywords = [
     "ai", "resume", "screening", "nlp", "machine-learning", 
-    "job-matching", "fastapi", "spacy", "recruitment"
+    "fastapi", "spacy", "recruitment", "hr-tech"
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -28,33 +28,23 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Office/Business :: Human Resources",
-    "Topic :: Text Processing :: Linguistic",
-    "Framework :: FastAPI",
 ]
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
-    "pydantic-settings>=2.1.0",
     "spacy>=3.7.0",
     "scikit-learn>=1.3.0",
     "numpy>=1.25.0",
     "pandas>=2.1.0",
     "PyMuPDF>=1.23.0",
-    "python-docx>=1.1.0",
     "python-multipart>=0.0.6",
     "aiofiles>=23.2.0",
-    "httpx>=0.25.0",
     "python-dotenv>=1.0.0",
-    "jinja2>=3.1.0",
-    "passlib[bcrypt]>=1.7.4",
-    "python-jose[cryptography]>=3.3.0",
-    "sqlalchemy>=2.0.0",
-    "redis>=5.0.0",
-    "gunicorn>=21.2.0",
 ]
 
 [project.optional-dependencies]
@@ -62,17 +52,13 @@ dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
-    "pytest-mock>=3.12.0",
-    "pytest-xdist>=3.5.0",
-    "black>=23.11.0",
+    "black>=23.1.0",
     "isort>=5.12.0",
     "flake8>=6.1.0",
     "mypy>=1.7.0",
-    "bandit>=1.7.5",
-    "safety>=2.3.5",
+    "bandit>=1.7.0",
+    "safety>=2.3.0",
     "pre-commit>=3.5.0",
-    "sphinx>=7.2.0",
-    "sphinx-rtd-theme>=1.3.0",
 ]
 test = [
     "pytest>=7.4.0",
@@ -80,24 +66,17 @@ test = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "httpx>=0.25.0",
-    "factory-boy>=3.3.0",
-    "faker>=20.1.0",
 ]
 docs = [
     "mkdocs>=1.5.0",
     "mkdocs-material>=9.4.0",
-    "mkdocs-swagger-ui-tag>=0.6.0",
+    "sphinx>=7.2.0",
 ]
-monitoring = [
-    "prometheus-client>=0.19.0",
+prod = [
+    "gunicorn>=21.2.0",
+    "psycopg2-binary>=2.9.0",
+    "redis>=5.0.0",
     "sentry-sdk[fastapi]>=1.38.0",
-    "structlog>=23.2.0",
-]
-ml = [
-    "tensorflow>=2.15.0",
-    "torch>=2.1.0",
-    "transformers>=4.35.0",
-    "sentence-transformers>=2.2.0",
 ]
 
 [project.urls]
@@ -111,14 +90,16 @@ Changelog = "https://github.com/your-org/ai-resume-screener/blob/main/CHANGELOG.
 resume-screener = "app.main:main"
 download-models = "scripts.download_models:main"
 
+# ===== TOOL CONFIGURATIONS =====
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["app*", "scripts*"]
 exclude = ["tests*", "docs*"]
 
 [tool.setuptools.package-data]
-app = ["templates/*", "static/*"]
-data = ["*.json", "sample_data/*"]
+"app" = ["py.typed"]
+"data" = ["*.json"]
 
 # ===== BLACK CONFIGURATION =====
 [tool.black]
@@ -136,6 +117,7 @@ extend-exclude = '''
   | \.venv
   | build
   | dist
+  | migrations
 )/
 '''
 
@@ -147,6 +129,11 @@ line_length = 88
 known_first_party = ["app", "tests"]
 known_third_party = ["fastapi", "pydantic", "spacy", "sklearn"]
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+default_section = "THIRDPARTY"
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip_glob = ["migrations/*"]
 
 # ===== MYPY CONFIGURATION =====
 [tool.mypy]
@@ -164,40 +151,43 @@ warn_no_return = true
 warn_unreachable = true
 strict_equality = true
 show_error_codes = true
+show_column_numbers = true
+show_error_context = true
+pretty = true
 
 [[tool.mypy.overrides]]
 module = [
     "spacy.*",
     "sklearn.*",
     "fitz.*",
-    "docx.*",
     "pdfminer.*",
+    "docx.*",
 ]
 ignore_missing_imports = true
 
 # ===== PYTEST CONFIGURATION =====
 [tool.pytest.ini_options]
-minversion = "7.0"
-addopts = [
-    "-ra",
-    "--strict-markers",
-    "--strict-config",
-    "--cov=app",
-    "--cov-report=term-missing",
-    "--cov-report=html",
-    "--cov-report=xml",
-    "--cov-fail-under=80",
-]
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+    "--strict-config",
+    "--cov=app",
+    "--cov-report=term-missing:skip-covered",
+    "--cov-report=html",
+    "--cov-report=xml",
+    "--cov-fail-under=80",
+]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests",
     "api: marks tests as API tests",
-    "nlp: marks tests that require NLP models",
+    "performance: marks tests as performance tests",
 ]
 filterwarnings = [
     "error",
@@ -211,10 +201,12 @@ filterwarnings = [
 source = ["app"]
 omit = [
     "*/tests/*",
-    "*/venv/*",
-    "*/.venv/*",
+    "*/test_*",
+    "*/conftest.py",
     "*/migrations/*",
-    "*/alembic/*",
+    "*/venv/*",
+    "*/env/*",
+    "*/__pycache__/*",
 ]
 branch = true
 
@@ -232,59 +224,121 @@ exclude_lines = [
     "@(abc\\.)?abstractmethod",
 ]
 show_missing = true
-precision = 2
+skip_covered = true
+sort = "Cover"
 
 [tool.coverage.html]
 directory = "htmlcov"
 
+[tool.coverage.xml]
+output = "coverage.xml"
+
 # ===== BANDIT CONFIGURATION =====
 [tool.bandit]
-exclude_dirs = ["tests", "venv", ".venv"]
+exclude_dirs = ["tests", "migrations"]
 skips = ["B101", "B601"]
 
 # ===== FLAKE8 CONFIGURATION =====
 [tool.flake8]
 max-line-length = 88
-extend-ignore = ["E203", "W503", "E501"]
+extend-ignore = ["E203", "E501", "W503"]
 exclude = [
     ".git",
     "__pycache__",
     "build",
     "dist",
+    ".eggs",
+    "*.egg-info",
     ".venv",
     "venv",
-    ".tox",
-    ".mypy_cache",
-    ".pytest_cache",
+    "migrations",
 ]
 per-file-ignores = [
     "__init__.py:F401",
     "tests/*:S101",
 ]
 
-# ===== SEMANTIC RELEASE CONFIGURATION =====
-[tool.semantic_release]
-version_toml = "pyproject.toml:project.version"
-branch = "main"
-changelog_file = "CHANGELOG.md"
-build_command = "pip install build && python -m build"
-dist_path = "dist/"
-upload_to_pypi = false
-upload_to_release = true
-remove_dist = false
+# ===== RUFF CONFIGURATION (Alternative to flake8) =====
+[tool.ruff]
+target-version = "py39"
+line-length = 88
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+    "migrations",
+]
 
-[tool.semantic_release.changelog]
-template_dir = "templates"
-changelog_file = "CHANGELOG.md"
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+"tests/*" = ["S101"]
 
-[tool.semantic_release.changelog.environment]
-block_start_string = "{%"
-block_end_string = "%}"
-variable_start_string = "{{"
-variable_end_string = "}}"
-comment_start_string = "{#"
-comment_end_string = "#}"
-trim_blocks = false
-lstrip_blocks = false
-newline_sequence = "\n"
-keep_trailing_newline = false
+[tool.ruff.isort]
+known-first-party = ["app"]
+
+# ===== PRE-COMMIT CONFIGURATION =====
+[tool.pre-commit]
+repos = [
+    {
+        repo = "https://github.com/pre-commit/pre-commit-hooks",
+        rev = "v4.5.0",
+        hooks = [
+            {id = "trailing-whitespace"},
+            {id = "end-of-file-fixer"},
+            {id = "check-yaml"},
+            {id = "check-added-large-files"},
+            {id = "check-merge-conflict"},
+            {id = "debug-statements"},
+        ]
+    },
+    {
+        repo = "https://github.com/psf/black",
+        rev = "23.1.0",
+        hooks = [{id = "black"}]
+    },
+    {
+        repo = "https://github.com/pycqa/isort",
+        rev = "5.12.0",
+        hooks = [{id = "isort"}]
+    },
+    {
+        repo = "https://github.com/pycqa/flake8",
+        rev = "6.1.0",
+        hooks = [{id = "flake8"}]
+    },
+    {
+        repo = "https://github.com/pre-commit/mirrors-mypy",
+        rev = "v1.7.1",
+        hooks = [{id = "mypy", additional_dependencies = ["types-all"]}]
+    },
+]
